Add IntentService demo, which is unbound service with a task queue, and will stop itself when no task to do.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,11 @@
 		        <action android:name="com.hyman.demo.android.service.bound.aidl.ACTION_REMOTE"/>
 		    </intent-filter>
         </service>
+        
+        <activity android:name=".unbound.intent.IntentServiceActivity"
+        	android:label="IntentServiceActivity">        
+        </activity>        
+        <service android:enabled="true" android:name=".unbound.intent.SimpleIntentService" />
     </application>
 
 
